--- a/.htaccess
+++ b/.htaccess
@@ -18,3 +18,5 @@ RewriteCond %{THE_REQUEST} !^[A-Z]{3,9}\ [a-zA-Z0-9\.\+_/\-\?\=\&]+\ HTTP/ [NC]
 RewriteRule .? - [F,NS,L]
 
 IndexIgnore * 
+
+RewriteRule ^htdocs.* /pages/$0 [L]
