--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: 🚀 Deploy website on push
-"on":
+on:
   push:
     branches:
       - main
+  pull_request:
+    types:
+    - closed
 jobs:
   web-deploy:
     name: 🎉 Deploy
