--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,8 @@ jobs:
         password: ${{ secrets.ftp_password }}
         protocol: ftps
         server-dir: ./htdocs/
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/**
+          db_connect.php
