--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: codespell-project/actions-codespell@v2
         with:
-         skip: ./.git,./vendor/
+         skip: './.git,./vendor/'
