add option to redirect to 404 if .php is included as file extension in URL

--- a/.htaccess
+++ b/.htaccess
@@ -29,3 +29,7 @@ Options All -Indexes
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
 RewriteRule ^([^\.]+)$ $1.html [NC,L]
+
+# if .php is included in URL, redirect to 404
+#RewriteCond %{THE_REQUEST} "^[^ ]* .*?\.php[? ].*$" [NC]
+#RewriteRule .* - [L,R=404]
