--- a/.htaccess
+++ b/.htaccess
@@ -2,21 +2,30 @@ RewriteEngine On
 
 DirectoryIndex home.php
 
-# Remove multiple slashes anywhere in the URL-path
-RewriteCond %{HTTP_HOST} !=localhost
-RewriteCond %{THE_REQUEST} \s[^?]*//
-RewriteRule (.*) /$1 [R=302,L]
+<If "%{HTTP_HOST} != 'localhost'">
+ErrorDocument 400 https://ngn.000.pe/error/400
+ErrorDocument 401 https://ngn.000.pe/error/401
+ErrorDocument 403 https://ngn.000.pe/error/403
+ErrorDocument 404 https://ngn.000.pe/error/404
+ErrorDocument 503 https://ngn.000.pe/error/503
 
-# Remove trailing slashes
-RewriteCond %{HTTP_HOST} !=localhost
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)/$ /$1 [L,R=301]
 
+RewriteCond %{THE_REQUEST} \s[^?]*//
+RewriteRule (.*) /$1 [R=302,L]
+</If>
+
+<ElseIf "%{HTTP_HOST} == 'localhost'">
+ErrorDocument 400 https://localhost/newgradnomad.com-html/error/400
+ErrorDocument 401 https://localhost/newgradnomad.com-html/error/401
+ErrorDocument 403 https://localhost/newgradnomad.com-html/error/403
+ErrorDocument 404 https://localhost/newgradnomad.com-html/error/404
+ErrorDocument 503 https://localhost/newgradnomad.com-html/error/503
+</ElseIf>
+
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-ErrorDocument 404 https://ngn.000.pe/error/404
-ErrorDocument 403 https://ngn.000.pe/error/403
 
 Header set Connection keep-alive
 AddType text/cache-manifest .manifest
