--- a/.htaccess
+++ b/.htaccess
@@ -16,13 +16,13 @@ RewriteCond %{THE_REQUEST} \s[^?]*//
 RewriteRule (.*) /$1 [R=302,L]
 </If>
 
-<ElseIf "%{HTTP_HOST} == 'localhost'">
+<If "%{HTTP_HOST} == 'localhost'">
 ErrorDocument 400 https://localhost/newgradnomad.com-html/error/400
 ErrorDocument 401 https://localhost/newgradnomad.com-html/error/401
 ErrorDocument 403 https://localhost/newgradnomad.com-html/error/403
 ErrorDocument 404 https://localhost/newgradnomad.com-html/error/404
 ErrorDocument 503 https://localhost/newgradnomad.com-html/error/503
-</ElseIf>
+</eIf>
 
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
